--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.9.0",
+    "framer-motion": "^12.23.12",
     "html-to-react": "^1.7.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
