--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
     "html-to-react": "^1.7.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
